; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/comctl32/extr_rebar.c_REBAR_FmtMask.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/comctl32/extr_rebar.c_REBAR_FmtMask.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@line = common dso_local global i64* null, align 8
@band_maskname = common dso_local global i8** null, align 8
@.str = private unnamed_addr constant [4 x i8] c" | \00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64* (i32)* @REBAR_FmtMask to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64* @REBAR_FmtMask(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  store i32 %0, i32* %2, align 4
  store i64 0, i64* %3, align 8
  %4 = load i64*, i64** @line, align 8
  store i64 0, i64* %4, align 8
  br label %5

5:                                                ; preds = %32, %1
  %6 = load i8**, i8*** @band_maskname, align 8
  %7 = load i64, i64* %3, align 8
  %8 = getelementptr inbounds i8*, i8** %6, i64 %7
  %9 = load i8*, i8** %8, align 8
  %10 = icmp ne i8* %9, null
  br i1 %10, label %11, label %35

11:                                               ; preds = %5
  %12 = load i32, i32* %2, align 4
  %13 = load i64, i64* %3, align 8
  %14 = trunc i64 %13 to i32
  %15 = shl i32 1, %14
  %16 = and i32 %12, %15
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %32

18:                                               ; preds = %11
  %19 = load i64*, i64** @line, align 8
  %20 = load i64, i64* %19, align 8
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %25

22:                                               ; preds = %18
  %23 = load i64*, i64** @line, align 8
  %24 = call i32 @strcat(i64* %23, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  br label %25

25:                                               ; preds = %22, %18
  %26 = load i64*, i64** @line, align 8
  %27 = load i8**, i8*** @band_maskname, align 8
  %28 = load i64, i64* %3, align 8
  %29 = getelementptr inbounds i8*, i8** %27, i64 %28
  %30 = load i8*, i8** %29, align 8
  %31 = call i32 @strcat(i64* %26, i8* %30)
  br label %32

32:                                               ; preds = %25, %11
  %33 = load i64, i64* %3, align 8
  %34 = add i64 %33, 1
  store i64 %34, i64* %3, align 8
  br label %5

35:                                               ; preds = %5
  %36 = load i64*, i64** @line, align 8
  ret i64* %36
}

declare dso_local i32 @strcat(i64*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
